--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^17.4.2",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
