--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-native-community/slider": "^4.4.2",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.20.0",
     "react": "18.2.0",
@@ -25,8 +28,8 @@
     "react-native-global-props": "^1.1.5",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10",
-    "expo-splash-screen": "~0.18.2"
+    "react-native-tab-view": "^3.5.1",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
