--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.11",
     "react-native-global-props": "^1.1.5",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-web": "~0.18.10",
-    "expo-splash-screen": "~0.18.2"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
